[package]
name = "day05"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.11"
lazy_static = "1.4.0"
maplit = "1.0.2"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
rstest = "0.9.0"
