[package]
name = "day07"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
lalrpop-util = "0.19.1"
regex = "1.4.2"
structopt = "0.3.21"
thiserror = "1.0.22"

[build-dependencies]
lalrpop = {version = "0.19.1", features = [ "lexer" ] }
