[package]
name = "day07"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.11"
lalrpop-util = "0.19.5"
regex = "1.5.4"
structopt = "0.3.21"
thiserror = "1.0.24"

[build-dependencies]
lalrpop = { version = "0.19.5", features = [ "lexer" ] }
