[package]
name = "day08"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.11"
structopt = "0.3.21"
thiserror = "1.0.24"

[dev-dependencies]
rstest = "0.9.0"
