[package]
name = "day09"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
edition = "2018"


[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
parse-display = "0.4.0"
permutohedron = "^0.1.7"
structopt = "0.3.21"
thiserror = "1.0.22"
