[package]
name = "day21"
version = "0.1.0"
authors = ["coriolinus <coriolinus@gmail.com>"]
edition = "2018"

[dependencies]
aoclib = { git = "https://github.com/coriolinus/aoclib.git" }
color-eyre = "0.5.10"
itertools = "0.10.0"
parse-display = "0.4.1"
permutohedron = "^0.2.0"
structopt = "0.3.21"
thiserror = "1.0.22"

[dev-dependencies]
maplit = "1.0.2"
